--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <body class="not-loaded">
     <div class="valentine-title">
-      <h1>Happy Valentine's Day <span class="name">Aditi</span> ❤️</h1>
+      <h1>Happy Valentine's Day <span class="name"><p>Aditi</p></span> ❤️</h1>
     </div>
     <div class="night"></div>
     <div class="flowers">
